# optimuon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  pypipublish.yml
src/optimuon/: __init__.py  _composite.py  _corrections.py  _muon.py  _newton_schulz.py  _routing.py
