[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "optimuon"
dynamic = ["version"]
description = "A performance-optimized Muon optimizer with foreach support, auto-routing, and composite optimizer patterns."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Emanuele Ballarin", email = "emanuele@ballarin.cc" }]
keywords = ["deep-learning", "optimizer", "muon", "pytorch", "newton-schulz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["torch>=2.7"]

[project.urls]
Repository = "https://github.com/emaballarin/optimuon"
Issues = "https://github.com/emaballarin/optimuon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/optimuon"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/optimuon/_version.py"
